swagger api 명세 문서 수정 & crawling 관련 엔드포인트의 body DTO 추가
