# backend/swagger.yaml
@@ -396,6 +396,8 @@ paths:
           description: 잘못된 요청
         '401':
           description: 잘못되거나 만료된 인증 정보
+        '403':
+          description: 허용되지 않은 권한
         '5XX':
           description: 내부 오류
 
@@ -499,10 +501,12 @@ paths:
           description: 잘못된 요청
         '401':
           description: 잘못되거나 만료된 인증 정보
+        '403':
+          description: 허용되지 않은 권한
         '5XX':
           description: 내부 오류
 
-  /riverlevel:
+  /crawling/riverlevel:
     post:
       tags:
         - crawling
@@ -517,6 +521,11 @@ paths:
           application/json:
             schema:
               type: object
+              example:
+                data:
+                  - obscd: seoul_1501
+                    water_level: 1.5
+                    obsdate: '2022-08-17T13:30:15Z'
               required:
                 - data
               properties:
@@ -549,10 +558,12 @@ paths:
           description: 잘못된 요청
         '401':
           description: 잘못되거나 만료된 인증 정보
+        '403':
+          description: 허용되지 않은 권한
         '5XX':
           description: 내부 오류
 
-  /rivergauge:
+  /crawling/rivergauge:
     post:
       tags:
         - crawling
@@ -569,6 +580,17 @@ paths:
               type: object
               required:
                 - data
+              example:
+                data:
+                  - obscd: seoul_1501
+                    obsnm: 성산2교
+                    mngorg: 환경부
+                    addr: 서울특별시 마포구 성산동 성산2교
+                    flood_warning: N
+                    lon: 37-33-56
+                    lat: 126-54-41
+                    planflood_level: 15.3
+                    gdt: null
               properties:
                 data:
                   type: array
@@ -581,6 +603,8 @@ paths:
                       - obsnm
                       - mngorg
                       - flood_warning
+                      - planflood_level
+                      - gdt
                     properties:
                       obscd:
                         type: string
@@ -619,6 +643,8 @@ paths:
           description: 잘못된 요청
         '401':
           description: 잘못되거나 만료된 인증 정보
+        '403':
+          description: 허용되지 않은 권한
         '5XX':
           description: 내부 오류
     patch:
@@ -635,6 +661,17 @@ paths:
           application/json:
             schema:
               type: object
+              example:
+                data:
+                  - obscd: seoul_1501
+                    obsnm: 성산2교
+                    mngorg: 환경부
+                    addr: 서울특별시 마포구 성산동 성산2교
+                    flood_warning: N
+                    lon: 37-33-56
+                    lat: 126-54-41
+                    planflood_level: 15.3
+                    gdt: null
               required:
                 - data
               properties:
@@ -646,9 +683,6 @@ paths:
                     description: 수위 관측계 정보
                     required:
                       - obscd
-                      - obsnm
-                      - mngorg
-                      - flood_warning
                     properties:
                       obscd:
                         type: string
@@ -687,6 +721,8 @@ paths:
           description: 잘못된 요청
         '401':
           description: 잘못되거나 만료된 인증 정보
+        '403':
+          description: 허용되지 않은 권한
         '5XX':
           description: 내부 오류
 
